fix(css) fix inconsistent spacing

--- a/neore-shop/src/components/ProductForm/ProductForm.css
+++ b/neore-shop/src/components/ProductForm/ProductForm.css
@@ -21,6 +21,9 @@
 /* --- General Styles for Input Groups --- */
 .form-group {
   margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .form-group label {
